Preserve whitespace in GSG content. Resolves #3943

--- a/frontend/src/metabase/css/core/text.css
+++ b/frontend/src/metabase/css/core/text.css
@@ -129,6 +129,10 @@
     font-family: Monaco, monospace;
 }
 
+.text-pre-wrap {
+  white-space: pre-wrap;
+}
+
 .text-measure {
     max-width: 620px;
 }
